test/files/neg/t5856.scala
object Test {
  val s1 = s"$null"
  val s2 = s"$false"
  val s3 = s"$true"
  val s4 = s"$yield"
  val s5 = s"$return"
  val s6 = s"$new"
  val s7 = s"$s1 $null $super"
  val s8 = s"$super"
  val s9 = s"$"
}